html/tests/html-list-fail.stderr
error: this open tag has no corresponding close tag
 --> $DIR/html-list-fail.rs:5:9
  |
5 |         <>
  |         ^^

error: this close tag has no corresponding open tag
 --> $DIR/html-list-fail.rs:9:9
  |
9 |         </>
  |         ^^^

error: this open tag has no corresponding close tag
  --> $DIR/html-list-fail.rs:13:9
   |
13 |         <><>
   |         ^^

error: this close tag has no corresponding open tag
  --> $DIR/html-list-fail.rs:17:9
   |
17 |         </></>
   |         ^^^

error: this open tag has no corresponding close tag
  --> $DIR/html-list-fail.rs:21:9
   |
21 |         <><></>
   |         ^^

error: only one root html element allowed
  --> $DIR/html-list-fail.rs:24:5
   |
24 | /     html! {
25 | |         <></>
26 | |         <></>
27 | |     };
   | |______^
   |
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)
